<resources>
    <string name="app_name">MicroBlogs</string>
    <string name="title_feed">Feed</string>
    <string name="title_tags">Tags</string>
    <string name="title_account">Account</string>
    <string name="please_login_or_sign_up_to_continue">Please Login or Sign up to Continue</string>
    <string name="login">Login</string>
    <string name="sign_up">Signup</string>
    <string name="username">UserName</string>
    <string name="email_email_com">email@email.com</string>
    <string name="this_is_a_bio">This is a bio.</string>
    <string name="edit">Edit</string>
    <string name="sign_out">Sign out</string>
    <string name="user_profile_image">user profile image.</string>
    <string name="something_went_wrong">Something went wrong.</string>
    <string name="error_image">Error image</string>
    <string name="save">Save</string>
    <string name="enter_tags_separating_with">Enter Tags(separating with ,)</string>
    <string name="write_your_article_in_markdown">Write your Article(in markdown)</string>
    <string name="about">About</string>
    <string name="title">Title</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="short_bio">Short Bio.</string>
    <string name="image_url">Image url</string>
    <string name="update">Update</string>
    <string name="follow">Follow</string>
    <string name="floating_button_to_add_new_article">floating button to add new article</string>
    <string name="dummy_article_title">This is a title of a article.</string>
    <string name="dummy_article_body">This is a body of the article,this is a body of a article,this is a body of a article,this is a body of a article,this is a body of a article,this is a body of a article,this is a body of a article</string>
    <string name="comment">Comment</string>
    <string name="icon_to_like_unlike_a_article">icon to like unlike a article</string>
    <string name="delete">Delete</string>
</resources>