<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/mobile_navigation"
        app:startDestination="@+id/nav_feed">

    <fragment
            android:id="@+id/nav_feed"
            android:name="com.scaler.microblogs.ui.feed.FeedFragment"
            android:label="@string/title_feed"
            tools:layout="@layout/fragment_feed">
        <action
                android:id="@+id/action_nav_feed_to_addEditArticleFragment"
                app:destination="@id/addEditArticleFragment" />
        <action
                android:id="@+id/action_nav_feed_to_articleFragment"
                app:destination="@id/articleFragment" />
    </fragment>

    <fragment
            android:id="@+id/nav_tags"
            android:name="com.scaler.microblogs.ui.tags.TagsFragment"
            android:label="@string/title_tags"
            tools:layout="@layout/fragment_tags">
        <action
                android:id="@+id/action_nav_tags_to_tagsFeedFragment"
                app:destination="@id/tagsFeedFragment" />
    </fragment>

    <fragment
            android:id="@+id/nav_account"
            android:name="com.scaler.microblogs.ui.account.AccountFragment"
            android:label="@string/title_account"
            tools:layout="@layout/fragment_account">
        <action
                android:id="@+id/action_nav_account_to_loginFragment"
                app:destination="@id/loginFragment" />
        <action
                android:id="@+id/action_nav_account_to_signupFragment"
                app:destination="@id/signupFragment" />
        <action
                android:id="@+id/action_nav_account_to_editProfileFragment"
                app:destination="@id/editProfileFragment" />
        <action
                android:id="@+id/action_nav_account_to_articleFragment"
                app:destination="@id/articleFragment" />
    </fragment>
    <fragment
            android:id="@+id/tagsFeedFragment"
            android:name="com.scaler.microblogs.ui.tagsFeed.TagsFeedFragment"
            android:label="Tag"
            tools:layout="@layout/fragment_tags_feed">
        <argument
                android:name="tag"
                app:argType="string" />
        <action
                android:id="@+id/action_tagsFeedFragment_to_articleFragment"
                app:destination="@id/articleFragment" />
    </fragment>
    <fragment
            android:id="@+id/loginFragment"
            android:name="com.scaler.microblogs.ui.auth.LoginFragment"
            android:label="Login"
            tools:layout="@layout/fragment_login" />
    <fragment
            android:id="@+id/signupFragment"
            android:name="com.scaler.microblogs.ui.auth.SignupFragment"
            android:label="Sign up"
            tools:layout="@layout/fragment_signup" />
    <fragment
            android:id="@+id/editProfileFragment"
            android:name="com.scaler.microblogs.ui.editProfile.EditProfileFragment"
            android:label="Edit Profile"
            tools:layout="@layout/fragment_edit_profile" />
    <fragment
            android:id="@+id/addEditArticleFragment"
            android:name="com.scaler.microblogs.ui.addEditArticle.AddEditArticleFragment"
            android:label="Article"
            tools:layout="@layout/fragment_add_edit_article">
        <argument
                android:name="slug"
                android:defaultValue="@null"
                app:argType="string"
                app:nullable="true" />
    </fragment>
    <fragment
            android:id="@+id/articleFragment"
            android:name="com.scaler.microblogs.ui.article.ArticleFragment"
            android:label="Article"
            tools:layout="@layout/fragment_article">
        <argument
                android:name="articleType"
                android:defaultValue="ARTICLE"
                app:argType="com.scaler.microblogs.utils.ArticleType" />
        <argument
                android:name="slug"
                app:argType="string" />
        <action
                android:id="@+id/action_articleFragment_to_addEditArticleFragment"
                app:destination="@id/addEditArticleFragment" />
    </fragment>
</navigation>